force-app/main/default/objects/Material__c/Material__c.object-meta.xml
<CustomObject>
    <label>Material</label>
    <nameField>
        <displayFormat>MAT-{000000}</displayFormat>
        <label>Material Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>