force-app/main/default/objects/Material__c/fields/Material_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Category__c</fullName>
    <label>Material Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>IT Equipment</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>