force-app/main/default/objects/Material__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>