force-app/main/default/objects/Material__c/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bearing</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Fastener</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Lubricant</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipe</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Stationery</fullName>
            </value>
            <value>
                <fullName>Valve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>