force-app/main/default/objects/Material__c/fields/Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Material_Status__c</fullName>
    <label>Material Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>