force-app/main/default/objects/Material__c/fields/Maximum_Stock__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Stock__c</fullName>
    <label>Maximum Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>