force-app/main/default/objects/Material__c/fields/Preferred_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Preferred Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>