force-app/main/default/objects/Material__c/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>