force-app/main/default/objects/Material__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Millimeter</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Pair</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Ton</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>